--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "actions-on-google": "^2.11.0",
+    "axios": "0.16.2",
     "dialogflow": "^0.6.0",
     "dialogflow-fulfillment": "^0.5.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "youtube-search": "^1.1.4",
+    "youtube-search-promise": "^1.0.3"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
